[gd_scene load_steps=8 format=2]

[ext_resource path="res://box/Box.gd" type="Script" id=1]
[ext_resource path="res://assets/images/BoxContent.png" type="Texture" id=2]
[ext_resource path="res://Fonts/mkocr.ttf" type="DynamicFontData" id=3]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0.933333, 0.933333, 0.933333, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 1
outline_color = Color( 0.933333, 0.933333, 0.933333, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="Box" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast_UP" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -64 )

[node name="RayCast_Down" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 64 )

[node name="RayCast_Left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )

[node name="RayCast_Right" type="RayCast2D" parent="."]
cast_to = Vector2( 64, 0 )

[node name="MoveTween" type="Tween" parent="."]

[node name="lblBoxNumber_Center" type="Label" parent="."]
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0862745, 0.431373, 0.576471, 1 )
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblBoxNumber_Mini" type="Label" parent="."]
visible = false
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0862745, 0.431373, 0.576471, 1 )
text = "0"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animation_move = SubResource( 4 )
[connection signal="input_event" from="." to="." method="_on_Box_input_event"]
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
